--- a/ETF_twse_crawler.ipynb
+++ b/ETF_twse_crawler.ipynb
@@ -10,6 +10,7 @@
     "import json\n",
     "import csv\n",
     "import time, datetime,os\n",
+    "import math\n",
     "import random\n",
     "from bs4 import BeautifulSoup as bs"
    ]
