--- a/ETF_twse_crawler.ipynb
+++ b/ETF_twse_crawler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
    },
    "outputs": [],
    "source": [
+    "# get the date when it is now\n",
     "dt = datetime.datetime.now()\n",
     "dt.year\n",
     "dt.month"
@@ -30,12 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "now = datetime.datetime.now()\n",
-    "year_list = range (2004,now.year+1) #since 2007 to this year\n",
+    "year_list = range (2004,dt.year+1) #since 2007 to this year\n",
     "month_list = range(1,13)  # 12 months\n",
     "day_list = range(1,32) # 31 days"
    ]
@@ -52,7 +52,7 @@
     "    for month in month_list:\n",
     "        for day in day_list:\n",
     "            if (dt.year == year and month > dt.month) :break  # break loop while month over current month\n",
-    "            if ((month == 4 or month == 6 or month == 9 or month == 11) and day == 31 ) :continue # these 4 month only have 30 days\n",
+    "            if ((month == 4 or month == 6 or month == 9 or month == 11) and day == 31 ) :continue # these 4 months only have 30 days\n",
     "            if (year == 2004 or year == 2008 or year == 2012 or year == 2016) :\n",
     "                if(month == 2 and day > 29) : continue # leap year --> there are 29 days in February\n",
     "            elif (month == 2 and day > 28) : continue # there are only 28 days in February\n",
@@ -60,21 +60,24 @@
     "            yy  = str(year)\n",
     "            mm  = month\n",
     "            dd  = day\n",
-    "            # E:\\KEN\\課程\\大四下\\資產管理策略與應用\\ETF追蹤\\ETF_history\n",
-    "            directory = 'E:/KEN/課程/大四下/資產管理策略與應用/ETF追蹤/ETF_history'+'/' + str(yy) +'/'       #setting directory\n",
-    "            filename = str(yy)+str(\"%02d\"%mm)+str(\"%02d\"%dd)+'.csv'          #setting file name\n",
+    "            \n",
+    "            # the data will be output like => \"./ETF_history/<filename>.csv\"\n",
+    "            directory = './ETF_history' + '/' + str(yy) +'/'                      #setting directory\n",
+    "            filename = str(yy)+str(\"%02d\"%mm)+str(\"%02d\"%dd)+'.csv'               #setting file name\n",
     "            \n",
     "            smt = get_webmsg(year ,month ,day)           #put the data into smt \n",
-    "            makedirs (year, month)                  #create directory function\n",
-    "            write_csv (directory, filename, smt)    # write files into CSV\n",
+    "            makedirs (year, month)                       #create directory function\n",
+    "            write_csv (directory, filename, smt)         # write files into CSV\n",
     "            \n",
+    "            # time.sleep(random.randint(10,20))\n",
     "            sleep_time = random_time()\n",
-    "            time.sleep(sleep_time)"
+    "            time.sleep(sleep_time)\n",
+    "           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,19 +85,17 @@
     "    date = str (year) + \"{0:0=2d}\".format(month) +\"{0:0=2d}\".format(day)  ## format is yyyymmdd\n",
     "    url_twse = 'http://www.twse.com.tw/exchangeReport/MI_INDEX?response=json&date='+date+'&type=0099P'\n",
     "    res =requests.post(url_twse,)\n",
-    "    \n",
-    "    # print(url_twse)\n",
-    "    # print(res)\n",
+    "\n",
     "    print(date)\n",
     "    \n",
     "    soup = bs(res.text , 'html.parser')\n",
-    "    smt = json.loads(soup.text)     #convert data into json\n",
+    "    smt = json.loads(soup.text)                     #convert data into json\n",
     "    return smt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,28 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create a directory in the current one doesn't exist\n",
     "def makedirs (year, month):\n",
-    "    yy      = str(year)\n",
-    "    mm       = str(month)\n",
-    "    directory =  'E:/KEN/課程/大四下/資產管理策略與應用/ETF追蹤/ETF_history'+'/' + yy +'/'\n",
+    "    yy        =  str(year)\n",
+    "    mm        =  str(month)\n",
+    "    directory =  './ETF_history'+'/' + yy +'/'\n",
     "    if not os.path.isdir(directory):\n",
-    "        os.makedirs (directory)  # os.makedirs able to create multi folders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# random time ( 10 - 20 )\n",
-    "def random_time():\n",
-    "    return (math.floor(random.random()*10) + 11)"
+    "        os.makedirs (directory)     # os.makedirs able to create multi folders"
    ]
   },
   {
@@ -149,7 +139,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# random time ( 10 - 20 )\n",
+    "# also can use random.ranint(10,20) directly, same return.\n",
+    "def random_time():\n",
+    "    return (math.floor(random.random()*10) + 11)"
+   ]
   }
  ],
  "metadata": {
